--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,16 +2,27 @@ body {
     display: flex;
     justify-content: center;
     max-width: 100vw;
-    background-color: white;
     min-height: 100vh;
     overflow-x: hidden;
-    padding-top: 5%;
+    padding: 0;
+    margin: 0;
+    background-color: #17171f;
 }
 
 .page-content {
-    gap: 3rem;
     padding-left: 20rem;
     transition: 0.5s;
+    gap: 0.5rem;
+}
+
+.info-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.facts {
+    gap: 0.5rem;
 }
 
 .horizontal-center {
@@ -32,7 +43,7 @@ body {
 .area {
     background-color: #0d0d11;
     box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.27);
-    padding: 2rem 6rem;
+    padding: 2rem 4rem 2rem 10rem;
     width: 50vw;
     border-radius: 0.5rem;
     gap: 1rem;
@@ -67,6 +78,7 @@ body {
     padding: 0 0.5rem 0.2rem 0.5rem;
     border-radius: 0.5rem;
     text-align: center;
+    z-index: 1;
 }
 
 .open-nav:hover {
