--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -7,6 +7,7 @@
     left: 0;
     background-color: #0d0d10;
     overflow-x: hidden;
+    overflow-y: hidden;
     transition: 0.5s;
     display: flex;
     flex-direction: column;
@@ -89,6 +90,10 @@
     border: none;
     font-family: "Roboto","Helvetica","Arial",sans-serif;
     font-size: 12px;
+}
+
+.download-cv:hover{
+    cursor: pointer;
 }
 
 .link-nav {
